fix spacing in book call cta

--- a/src/assets/css/components/_scroll-slides.scss
+++ b/src/assets/css/components/_scroll-slides.scss
@@ -116,7 +116,7 @@
 
 .scroll-slides__link-imagecaption {
   color: inherit;
-  line-height: 0;
+  line-height: 1;
   margin-bottom: 0.25rem;
 }
 
